# btc-toolkit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
btc_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
op_return_reader/: __init__.py  __main__.py  cli.py  decoder.py
tests/: test_decoder.py
